--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
       "@app/*": ["app/*"],
       "@components/*": ["app/components/*"],
       "@animations/*": ["app/animations/*"],
-      "@services/*": ["app/services/*"]
+      "@services/*": ["app/services/*"],
+      "@shared/*": ["app/shared/*"]
     },
     "sourceMap": true,
     "declaration": false,
