--- a/functions/package.json
+++ b/functions/package.json
@@ -11,7 +11,8 @@
   "main": "lib/index.js",
   "dependencies": {
     "firebase-admin": "^5.5.1",
-    "firebase-functions": "^0.7.4"
+    "firebase-functions": "^0.7.4",
+    "nodemailer": "^4.4.1"
   },
   "devDependencies": {
     "typescript": "^2.5.3"
