--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "firebase": "^4.8.0",
     "firebase-functions": "^0.7.3",
     "ng2-bootstrap": "^1.6.3",
+    "ngx-bootstrap": "^2.0.0-rc.0",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
