--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^5.0.0",
+    "@angular/cdk": "^5.0.2",
     "@angular/common": "^5.0.0",
     "@angular/compiler": "^5.0.0",
     "@angular/core": "^5.0.0",
     "@angular/forms": "^5.0.0",
     "@angular/http": "^5.0.0",
+    "@angular/material": "^5.0.2",
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
@@ -26,6 +28,7 @@
     "core-js": "^2.4.1",
     "firebase": "^4.8.0",
     "firebase-functions": "^0.7.3",
+    "hammerjs": "^2.0.8",
     "ng2-bootstrap": "^1.6.3",
     "ngx-bootstrap": "^2.0.0-rc.0",
     "rxjs": "^5.5.2",
